# sitios-minca

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  startup.sh
alembic/: env.py
alembic/versions/: 216949f9cb6a_create_place_table.py  67456224aca0_create_table_all_table.py  99d19d37a657_create_table_user.py  f436a38c9c49_first_migration.py
app/: __init__.py  main.py
app/api/: api.py  deps.py
app/api/endpoints/: auth.py  places.py
app/core/: config.py  security.py
app/crud/: crud_place.py  crud_user.py  places.py
app/database/: base.py  session.py
app/models/: place.py  user.py
app/schemas/: user.py
